k8s/ip314s21-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip314s21-service
  namespace: ip314
  labels:
    owner: ip314s21
    app: ip314s21-app
spec:
  selector:
    app: ip314s21-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
